[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Thomas CRAMBERT <thomas.crambert@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pdbpp = "^0.10.3"
pre-commit = "^3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
